--- a/OrdersManagement (52)/.settings/org.eclipse.core.resources.prefs
+++ b/OrdersManagement (52)/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/gui/FormPanel.java=UTF-8
+encoding//src/gui/MainFrame.java=UTF-8
 encoding//src/model/Database.java=UTF-8
