Added most profitable clients

--- a/OrdersManagement (52)/.settings/org.eclipse.core.resources.prefs
+++ b/OrdersManagement (52)/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/gui/MainFrame.java=UTF-8
+encoding//src/gui_clients/MostProfitModel.java=UTF-8
 encoding//src/gui_orders/FormPanel.java=UTF-8
 encoding//src/model/Database.java=UTF-8
