Added (changed to) CardLayout

--- a/OrdersManagement (52)/.settings/org.eclipse.core.resources.prefs
+++ b/OrdersManagement (52)/.settings/org.eclipse.core.resources.prefs
@@ -4,3 +4,4 @@ encoding//src/gui_clients/AverageClientModel.java=UTF-8
 encoding//src/gui_clients/MostProfitModel.java=UTF-8
 encoding//src/gui_orders/FormPanel.java=UTF-8
 encoding//src/model/Database.java=UTF-8
+encoding//src/model/StatisticsData.java=UTF-8
